src/test/deca/syntax/valid/personal/read.deca
// Description:
//    Programme minimaliste utilisant les fonction de base read.
//
// Resultats:
//
//
// Historique:
//    cree le 06/01/2025

{   
   int x;
   float y;
   x=readInt();
   y=readFloat();

}